AB#222305: Fix z-index for media item.

--- a/docroot/themes/custom/emulsifymars/components/02-molecules/story-highlight/_story_highlight.scss
+++ b/docroot/themes/custom/emulsifymars/components/02-molecules/story-highlight/_story_highlight.scss
@@ -174,6 +174,7 @@
 
   & .media_item_1 {
     align-self: center;
+    z-index: 3;
 
     &__wrapper{
       max-height: 43.9rem;
@@ -240,6 +241,7 @@
   }
 
   & .media_item_2 {
+    z-index: 2;
     margin-left: auto;
 
     &__wrapper{
@@ -312,6 +314,7 @@
   }
 
   & .media_item_3 {
+    z-index: 2;
     margin-right: auto;
 
     @include xs {
@@ -377,7 +380,6 @@
   & .media_item_2,
   & .media_item_3 {
     position: relative;
-    z-index: 2;
     margin-bottom: 30px;
     border-bottom: 1px solid $silver;
 
@@ -506,7 +508,7 @@
 
     @include xs {
       right: -20px;
-      bottom: -53px;
+      bottom: -50px;
 
       & img {
         max-width: 182px;
@@ -526,7 +528,7 @@
 
     @include xl {
       right: -4rem;
-      bottom: -160px;
+      bottom: -120px;
       & img {
         max-width: 356px;
         height: 356px;
